--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.1",
+        "digikraaft/laravel-review-rating": "^3.0",
         "guzzlehttp/guzzle": "^7.8.1",
         "laravel/framework": "^10.46",
         "laravel/sanctum": "^3.3.3",
