--- a/.env.example
+++ b/.env.example
@@ -8,17 +8,17 @@ LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=mysql
+DB_CONNECTION=sqlite
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=laravel
+DB_DATABASE=database/database.sqlite
 DB_USERNAME=root
 DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 FILESYSTEM_DISK=local
-QUEUE_CONNECTION=sync
+QUEUE_CONNECTION=database
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
 
@@ -59,3 +59,17 @@ VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
 GROQ_API_TOKEN=
+ELEVEN_LABS_API_TOKEN=
+ELEVEN_LABS_VOICE_ID=
+ELEVEN_LABS_MODEL_ID=
+HF_ACCESS_TOKEN=
+JINA_ACESS_TOKEN=
+
+CHROMA_HOST=http://localhost
+CHROMA_PORT=8080
+CHROMA_TENANT=default
+CHROMA_DATABASE=default
+CHROMA_SYNC_ENABLED=true
+CHROMA_SYNC_QUEUE=default
+CHROMA_SYNC_CONNECTION=database
+CHROMA_SYNC_TRIES=3
