--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
+    "@hookform/resolvers": "^3.3.4",
     "@mui/icons-material": "^5.15.11",
     "@mui/material": "^5.15.11",
     "@tanstack/react-query": "^5.24.1",
@@ -22,9 +23,11 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-error-boundary": "^4.0.13",
+    "react-hook-form": "^7.51.0",
     "react-router-dom": "^6.22.2",
     "sass": "^1.71.1",
-    "swiper": "^11.0.7"
+    "swiper": "^11.0.7",
+    "yup": "^1.3.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.56",
