--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+.env
+__pycache__
+
 /.phpunit.cache
 /node_modules
 /public/build
@@ -5,7 +8,6 @@
 /public/storage
 /storage/*.key
 /vendor
-.env
 .env.backup
 .env.production
 .phpunit.result.cache
